--- a/Dockerfile_ubuntu.focal
+++ b/Dockerfile_ubuntu.focal
@@ -1,20 +1,7 @@
 FROM ubuntu:20.04
 
 ENV DEBIAN_FRONTEND=noninteractive
-ENV TZ=Europe/Moscow
-
-ARG PACKAGE_ORIGIN="https://gstreamer.freedesktop.org"
-ARG PREFIX=/usr
-ARG LIBDIR=/usr/lib/x86_64-linux-gnu
-ARG LIBEXECDIR=/usr/lib/x86_64-linux-gnu
-#ARG GST_VERSION=1.16.2
-ARG GST_VERSION=1.18.4
-ARG BUILD_TYPE=release
-ENV GSTREAMER_LIB_DIR=${LIBDIR}
-ENV LIBRARY_PATH=${GSTREAMER_LIB_DIR}:${GSTREAMER_LIB_DIR}/gstreamer-1.0:${LIBRARY_PATH}
-ENV LD_LIBRARY_PATH=${LIBRARY_PATH}
-ENV PKG_CONFIG_PATH=${GSTREAMER_LIB_DIR}/pkgconfig
-ENV GST_VAAPI_ALL_DRIVERS=1
+ENV TZ=america/los_angeles
 
 # install packages
 RUN DEBIAN_FRONTEND=noninteractive apt-get update && \
@@ -38,7 +25,6 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update && \
     gcc \
     gettext \
     git-core \
-    git-lfs \
     libbsd-dev \
     libclang-dev \
     libdrm-dev \
@@ -97,27 +83,13 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update && \
     xutils-dev \
     xz-utils \
     yasm \
-  && git lfs install \
   && pip3 install \
     attr \
     bd-metric \
     distro \
     lxml \
     meson \
-    ninja \
-    numpy \
-    scikit-image \
-    slash==1.5.1 \
-  && apt-get -y clean \
-  && apt-get -y autoclean \
-  && echo "%sudo ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/nopass \
-  && useradd -G sudo,video -m media
-
-#  && add-apt-repository -y ppa:intel-opencl/intel-opencl \
-#  && apt-get -y install libigc-dev \
-
-# WA for sudo errors in containers (https://github.com/sudo-project/sudo/issues/42)
-RUN echo "Set disable_coredump false" >> /etc/sudo.conf
+    ninja 
 
 WORKDIR /build
 RUN mkdir -p build/src
@@ -125,16 +97,13 @@ RUN mkdir -p build/src
 
 # Install oneVPL and oneVPL GPU drivers from Agama and oneAPI
 #-----------------------
-RUN apt-get update -y && apt-get install -y --no-install-recommends software-properties-common ca-certificates gnupg wget sudo && \
+RUN apt-get update -y && apt-get install -y --no-install-recommends software-properties-common ca-certificates gnupg wget && \
     wget -qO - https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS-2023.PUB | apt-key add - && \
     wget -qO - https://repositories.intel.com/graphics/intel-graphics.key | apt-key add - && \
     add-apt-repository "deb https://apt.repos.intel.com/oneapi all main" && \
     add-apt-repository "deb [arch=amd64] https://repositories.intel.com/graphics/ubuntu focal main" && \
     apt-get update && \
     apt-get install -y intel-opencl-icd intel-media-va-driver-non-free libmfx1 intel-oneapi-onevpl-devel
-
-# Workaround for meson
-COPY vpl.pc /opt/intel/oneapi/vpl/2021.2.2/lib/pkgconfig/vpl.pc
 
 ENV CMAKE_PREFIX_PATH=/opt/intel/oneapi/vpl
 ENV CPATH=/opt/intel/oneapi/vpl/2021.2.2/include
@@ -149,10 +118,23 @@ ENV VPL_ROOT=/opt/intel/oneapi/vpl/2021.2.2
 ENV ONEAPI_ROOT=/opt/intel/oneapi
 ENV LIBVA_DRIVER_NAME=iHD
 
+# Workaround for meson
+COPY vpl.pc /opt/intel/oneapi/vpl/2021.2.2/lib/pkgconfig/vpl.pc
+
 
 # GStreamer core
 #-----------------------
-RUN git clone https://gitlab.freedesktop.org/gstreamer/gstreamer.git && \
+ARG PACKAGE_ORIGIN="https://gstreamer.freedesktop.org"
+ARG PREFIX=/usr
+ARG LIBDIR=/usr/lib/x86_64-linux-gnu
+ARG LIBEXECDIR=/usr/lib/x86_64-linux-gnu
+ARG BUILD_TYPE=release
+ENV GSTREAMER_LIB_DIR=${LIBDIR}
+ENV LIBRARY_PATH=${GSTREAMER_LIB_DIR}:${GSTREAMER_LIB_DIR}/gstreamer-1.0:${LIBRARY_PATH}
+ENV LD_LIBRARY_PATH=${LIBRARY_PATH}
+ENV PKG_CONFIG_PATH=${GSTREAMER_LIB_DIR}/pkgconfig:${PKG_CONFIG_PATH}
+
+RUN git clone --depth=1 https://gitlab.freedesktop.org/gstreamer/gstreamer.git && \
     cd gstreamer && \
     PKG_CONFIG_PATH=$PWD/build/pkgconfig meson \
         -Dexamples=disabled \
@@ -172,7 +154,7 @@ RUN git clone https://gitlab.freedesktop.org/gstreamer/gstreamer.git && \
 
 # GStreamer Base plugins
 #-----------------------
-RUN git clone https://gitlab.freedesktop.org/gstreamer/gst-plugins-base.git && \
+RUN git clone --depth=1 https://gitlab.freedesktop.org/gstreamer/gst-plugins-base.git && \
     cd gst-plugins-base && \
     PKG_CONFIG_PATH=$PWD/build/pkgconfig:${PKG_CONFIG_PATH} meson \
         -Dexamples=disabled \
@@ -192,7 +174,7 @@ RUN git clone https://gitlab.freedesktop.org/gstreamer/gst-plugins-base.git && \
 
 # GStreamer Good plugins
 #-----------------------
-RUN git clone https://gitlab.freedesktop.org/gstreamer/gst-plugins-good.git && \
+RUN git clone --depth=1 https://gitlab.freedesktop.org/gstreamer/gst-plugins-good.git && \
     cd gst-plugins-good && \
     PKG_CONFIG_PATH=$PWD/build/pkgconfig:${PKG_CONFIG_PATH} meson \
         -Dexamples=disabled \
@@ -210,9 +192,34 @@ RUN git clone https://gitlab.freedesktop.org/gstreamer/gst-plugins-good.git && \
     meson install -C build/
 
 
-# GStreamer Bad plugins
+# GStreamer Ugly plugins
 #-----------------------
-RUN git clone https://github.com/intel-media-ci/cartwheel-gst-plugins-bad --recursive && \
+RUN git clone --depth=1 https://gitlab.freedesktop.org/gstreamer/gst-plugins-ugly.git && \
+    cd gst-plugins-ugly && \
+    PKG_CONFIG_PATH=$PWD/build/pkgconfig:${PKG_CONFIG_PATH} meson \
+        -Dexamples=disabled \
+        -Dtests=disabled \
+        -Dgtk_doc=disabled \
+        -Dnls=disabled \
+        -Dcdio=disabled \
+        -Dsid=disabled \
+        -Dmpeg2dec=disabled \
+        -Ddvdread=disabled \
+        -Da52dec=disabled \
+        -Dpackage-origin="${PACKAGE_ORIGIN}" \
+        --buildtype=${BUILD_TYPE} \
+        --prefix=${PREFIX} \
+        --libdir=${LIBDIR} \
+        --libexecdir=${LIBEXECDIR} \
+    build/ && \
+    ninja -C build && \
+    DESTDIR=/home/build meson install -C build/ && \
+    meson install -C build/
+
+
+# GStreamer Bad plugins w/ oneVPL from Media CI Cartwheel
+#-----------------------
+RUN git clone --depth=1 https://github.com/intel-media-ci/cartwheel-gst-plugins-bad --recursive && \
     cd cartwheel-gst-plugins-bad/gst-plugins-bad && \
     git config --global user.email "dev@example.com" && \
     git config --global user.name "dev" && \
@@ -246,34 +253,10 @@ RUN git clone https://github.com/intel-media-ci/cartwheel-gst-plugins-bad --recu
     meson install -C build/
 
 
-# GStreamer Ugly plugins
-#-----------------------
-RUN git clone https://gitlab.freedesktop.org/gstreamer/gst-plugins-ugly.git && \
-    cd gst-plugins-ugly && \
-    PKG_CONFIG_PATH=$PWD/build/pkgconfig:${PKG_CONFIG_PATH} meson \
-        -Dexamples=disabled \
-        -Dtests=disabled \
-        -Dgtk_doc=disabled \
-        -Dnls=disabled \
-        -Dcdio=disabled \
-        -Dsid=disabled \
-        -Dmpeg2dec=disabled \
-        -Ddvdread=disabled \
-        -Da52dec=disabled \
-        -Dpackage-origin="${PACKAGE_ORIGIN}" \
-        --buildtype=${BUILD_TYPE} \
-        --prefix=${PREFIX} \
-        --libdir=${LIBDIR} \
-        --libexecdir=${LIBEXECDIR} \
-    build/ && \
-    ninja -C build && \
-    DESTDIR=/home/build meson install -C build/ && \
-    meson install -C build/
-
-
 # GStreamer VAAPI plugins
 #-----------------------
-RUN git clone https://gitlab.freedesktop.org/gstreamer/gstreamer-vaapi.git && \
+ENV GST_VAAPI_ALL_DRIVERS=1
+RUN git clone --depth=1 https://gitlab.freedesktop.org/gstreamer/gstreamer-vaapi.git && \
     cd gstreamer-vaapi && \
     PKG_CONFIG_PATH=$PWD/build/pkgconfig:${PKG_CONFIG_PATH} meson \
         -Dexamples=disabled \
@@ -285,7 +268,8 @@ RUN git clone https://gitlab.freedesktop.org/gstreamer/gstreamer-vaapi.git && \
         --prefix=${PREFIX} \
         --libdir=${LIBDIR} \
         --libexecdir=${LIBEXECDIR} \
-    build/ && \
-    ninja -C build && \
-    DESTDIR=/home/build meson install -C build/ && \
-    meson install -C build/
+    build/ 
+#    build/ && \
+#    ninja -C build && \
+#    DESTDIR=/home/build meson install -C build/ && \
+#    meson install -C build/
